syntax = "proto3";

package album;

message Album {
  string id = 1;
  string title = 2;
  string description = 3;
}

message SearchAlbumsRequest {
  string query = 1;
}

message SearchAlbumsResponse {
  repeated Album albums = 1;
}
message CreateAlbumRequest {

string title = 1;
string description = 2;
}

message CreateAlbumResponse {
Album album = 1;
}
service AlbumService {
rpc CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse);
rpc SearchAlbums(SearchAlbumsRequest) returns (SearchAlbumsResponse);
}
